--- a/.env.sample
+++ b/.env.sample
@@ -25,7 +25,7 @@ TELEGRAPH_TOKEN="
 #API_HASH=452b0359b988148995f22ff0f4229750  # get it from https://core.telegram.org/api/obtaining_api_id
 #IMG_RELAY_SERVER=https://wsrv.nl/?url=  # default: https://rsstt-img-relay.rongrong.workers.dev/
 #IMAGES_WESERV_NL=https://t0.nl/  # default: https://wsrv.nl/
-#USER_AGENT=Mozilla/5.0 (Android 12; Mobile; rv:68.0) Gecko/68.0 Firefox/96.0  # default: RSStT/2.2 RSS Reader
+#USER_AGENT=Mozilla/5.0 (Android 12; Mobile; rv:68.0) Gecko/68.0 Firefox/96.0  # default: RSStT/2.x RSS Reader
 #IPV6_PRIOR=1  # default: 0
 #T_PROXY=socks5://172.17.0.1:1080  # Proxy used to connect to the Telegram API
 #R_PROXY=socks5://172.17.0.1:1080  # Proxy used to fetch feeds
