--- a/.env.sample
+++ b/.env.sample
@@ -20,7 +20,7 @@ TELEGRAPH_TOKEN="
 #ERROR_LOGGING_CHAT=-1001234567890  # default: the first MANAGER
 #MULTIUSER=0  # default: 1
 #CRON_SECOND=30  # 0-59, default: 0
-#DATABASE_URL=postgres://username:password@host:port/db_name  # default: sqlite://path/to/config/db.sqlite3
+#DATABASE_URL=postgres://username:password@host:port/db_name  # default: sqlite:/path/to/config/db.sqlite3
 #API_ID=1025907  # get it from https://core.telegram.org/api/obtaining_api_id
 #API_HASH=452b0359b988148995f22ff0f4229750  # get it from https://core.telegram.org/api/obtaining_api_id
 #IMG_RELAY_SERVER=https://wsrv.nl/?url=  # default: https://rsstt-img-relay.rongrong.workers.dev/
