ci(pre-commit): bump pre-commit-hooks from 4.6.0 to 5.0.0
Signed-off-by: Rongrong <i@rong.moe>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,7 +13,7 @@ ci:
 
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.6.0
+    rev: v5.0.0
     hooks:
       - id: check-added-large-files
         args: [ "--enforce-all" ]
@@ -23,8 +23,7 @@ repos:
       - id: check-case-conflict
       - id: check-docstring-first
       - id: check-executables-have-shebangs
-      # unreleased, let's enable it later
-      #- id: check-illegal-windows-names
+      - id: check-illegal-windows-names
       - id: check-json
       - id: check-merge-conflict
       - id: check-shebang-scripts-are-executable
