feat(web.req): increase header size limits
Two environmental variables (`HTTP_MAX_LINE_SIZE` and
`HTTP_MAX_FIELD_SIZE`) are also introduced to make them tunable.

Fixes #705

Signed-off-by: Rongrong <i@rong.moe>

--- a/.env.sample
+++ b/.env.sample
@@ -35,6 +35,8 @@ TELEGRAPH_TOKEN="
 #HTTP_TIMEOUT=30  # default: 12
 #HTTP_CONCURRENCY=0  # default: 1024
 #HTTP_CONCURRENCY_PER_HOST=0  # default: 16
+#HTTP_MAX_LINE_SIZE=32768  # default: 16384
+#HTTP_MAX_FIELD_SIZE=32768  # default: 16384
 #TABLE_TO_IMAGE=1  # default: 0
 #TRAFFIC_SAVING=1  # default: 0
 #LAZY_MEDIA_VALIDATION=1  # default: 0
