--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-TOKEN=7930815826:AAG_kZ3HQdS6SFYspT9OCcg7NcwB4qZqvFU  # get it from @BotFather
+TOKEN=7405407505:AAHpB7in5PT4pJoRTmQ7m8xyk1qzmC9Y8kk  # get it from @BotFather
 MANAGER=801062947  # get it from @userinfobot, can be a list (e.g., 1234567890;987654321)
 
 # ↓------ To disable sending via Telegraph, comment out this area ------↓ #
-# Get Telegraph API access tokens: https://api.telegra.ph/createAccount?short_name=RSStT&author_name=Generated%20by%20RSStT&author_url=https%3A%2F%2Fgithub.com%2FRongronggg9%2FRSS-to-Telegram-Bot
+# Get Telegraph API access tokens: https://api.telegra.ph/createAccount?short_name=RSStT&author_name=Generated%20by%20RSStT&author_url=https%3A%2F%2Fgithub.com%2FEngDawood%2FYemen-Jobs-RSS
 # Refresh the page every time you get a new token.
 # If you have a lot of subscriptions, make sure to get at least 5 tokens.
 #                            ↓ Replace with your access tokens ↓
@@ -14,7 +14,7 @@ TELEGRAPH_TOKEN="
         "
 # ↑------ To disable sending via Telegraph, comment out this area ------↑ #
 
-# Please read https://github.com/Rongronggg9/RSS-to-Telegram-Bot/blob/master/docs/advanced-settings.md for more details.
+# Please read https://github.com/EngDawood/Yemen-Jobs-RSS/blob/master/docs/advanced-settings.md for more details.
 # ↓------ Advanced settings ------↓ #
 #ERROR_LOGGING_CHAT=-1001234567890  # default: the first MANAGER
 #MULTIUSER=0  # default: 1
