Fix Render service name to match repository naming convention
- Updated service name from 'yemen-jobs-rss' to 'yemen-jobs-rss-bot'
- Fixed PORT environment variable reference to use new service name
- This resolves the issue where Render deploy opens wrong URL

--- a/render.yaml
+++ b/render.yaml
@@ -1,13 +1,13 @@
 services:
   - type: web
-    name: yemen-jobs-rss
+    name: yemen-jobs-rss-bot
     runtime: docker
     dockerfilePath: ./Dockerfile
     envVars:
       - key: PORT
         fromService:
           type: web
-          name: yemen-jobs-rss
+          name: yemen-jobs-rss-bot
           property: port
       - key: TOKEN
         sync: false
